Cobrinha funcionando, faltam apenas a heuristica do jogo.

--- a/examples/abcg_snake_game/CMakeLists.txt
+++ b/examples/abcg_snake_game/CMakeLists.txt
@@ -1,3 +1,6 @@
 project(abcg_snake_game)
-add_executable(${PROJECT_NAME} main.cpp openglwindow.cpp cobrinha.cpp)
+add_executable(${PROJECT_NAME}  main.cpp 
+                                openglwindow.cpp 
+                                cobrinha.cpp
+                                tabuleiro.cpp)
 enable_abcg(${PROJECT_NAME})
