--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,4 +5,4 @@
 add_subdirectory(abcg_snake_game)
 # add_subdirectory(coloredtriangles)
 # add_subdirectory(regularpolygons)
-
+# add_subdirectory(asteroids)
