Prestes a implementar as funcionalidades finais

--- a/examples/abcg_snake_game/CMakeLists.txt
+++ b/examples/abcg_snake_game/CMakeLists.txt
@@ -2,5 +2,6 @@ project(abcg_snake_game)
 add_executable(${PROJECT_NAME}  main.cpp 
                                 openglwindow.cpp 
                                 cobrinha.cpp
-                                tabuleiro.cpp)
+                                tabuleiro.cpp
+                                comida.cpp)
 enable_abcg(${PROJECT_NAME})
