Finalizada implementação do segundo projeto.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,7 +2,10 @@
 # add_subdirectory(firstapp)
 # add_subdirectory(tictactoe)
 # add_subdirectory(sierpinski)
-add_subdirectory(abcg_snake_game)
+# add_subdirectory(abcg_snake_game)
 # add_subdirectory(coloredtriangles)
 # add_subdirectory(regularpolygons)
 # add_subdirectory(asteroids)
+# add_subdirectory(loadmodel)
+add_subdirectory(abcg_testarossa)
+
