--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,5 +7,14 @@
 # add_subdirectory(regularpolygons)
 # add_subdirectory(asteroids)
 # add_subdirectory(loadmodel)
-add_subdirectory(abcg_testarossa)
+# add_subdirectory(abcg_testarossa)
+# add_subdirectory(lookat)
+# add_subdirectory(starfield)
+# add_subdirectory(viewer1)
+# add_subdirectory(viewer2)
+# add_subdirectory(viewer3)
+# add_subdirectory(viewer4)
+# add_subdirectory(viewer5)
+# add_subdirectory(viewer6)
+add_subdirectory(abcg_horizon)
 
